baml_language/crates/baml_tests/snapshots/compiles/test_expr_with_runner/baml_tests__compiles__test_expr_with_runner__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 31475
---
=== PPIR ===
function user.$init_test_main(registry: testing.TestCollector) -> ?  [expr] {
  { registry.register_test("with quorum", () -> void { { let result = "hello" } assert.not_null(result) }, testing.Quorum(5, 3)) } null
}
