baml_language/crates/baml_tests/snapshots/compiles/test_expr_with_runner/baml_tests__compiles__test_expr_with_runner__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.$init_test_main(registry: testing.TestCollector) -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: testing.TestCollector // registry // param
    let _2: void
    let _3: () -> void throws unknown
    let _4: (() -> testing.TestReport throws never) -> (() -> testing.TestReport throws never) throws never

    bb0: {
        _3 = make_closure lambda[0]();
        _4 = call const fn testing.Quorum(const 5_i64, const 3_i64) -> [bb1];
    }

    bb1: {
        _2 = call const fn testing.TestCollector.register_test(copy _1, const "with quorum", copy _3, copy _4) -> [bb2];
    }

    bb2: {
        _0 = const null;
        goto -> bb3;
    }

    bb3: {
        return;
    }
}

// lambda[0]
fn .<lambda($init_test_main, 0)>() -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: string // result
    let _2: string

    bb0: {
        _1 = const "hello";
        _2 = copy _1;
        _0 = call const fn assert.not_null(copy _2) -> [bb1];
    }

    bb1: {
        return;
    }
}
