baml_language/crates/baml_tests/snapshots/compiles/test_expr_with_runner/baml_tests__compiles__test_expr_with_runner__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.$init_test_main(registry: testing.TestCollector) -> ? throws never {
  { : null
    registry.register_test("with quorum", () -> void { ... }, testing.Quorum(5, 3)) : void
      () -> void { ... } : () -> void throws unknown
        {
          let result = "hello"
          assert.not_null(result)
        }
    null : null
  }
}
lambda user.$init_test_main {
}
