baml_language/crates/baml_tests/snapshots/compiles/test_expr_with_runner/baml_tests__compiles__test_expr_with_runner__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function $init_test(registry: unknown) -> null {
    load_var ?1
    call ?
    pop 1
    load_const ?
    return
}

function boundary.LocalId.capture(self: boundary.LocalId, inputs: bool | null, output: bool | null, error: bool | null) -> boundary.LocalId {
}

function boundary.id() -> boundary.LocalId {
}

function boundary.id.current() -> string {
}

function reflect.call_any(f: baml.AnyFunction<Returns = R, Throws = E>, args: unknown[], kwargs: map<string, unknown>) -> R {
}

function reflect.signature(f: baml.AnyFunction<Returns = unknown, Throws = unknown>) -> reflect.Signature {
}

function user.$init_test_main(registry: testing.TestCollector) -> null {
    load_const 5
    load_const 3
    call testing.Quorum
    store_var _4
    load_var registry
    load_const "with quorum"
    make_closure .<lambda($init_test_main, 0)>, 0
    load_var _4
    call testing.TestCollector.register_test
    pop 1
    load_const null
    return
}
